// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatabaseConnectionEditorToolbar should be rendered 1`] = `
<div
  className="sc-AxirZ hEJXgT"
>
  <div
    className="martini-tree-icon martini-jdbc-icon"
    style={
      Object {
        "marginRight": "4px",
        "position": "relative",
      }
    }
  >
    <div
      className="martini-started-overlay-icon"
      style={
        Object {
          "backgroundPosition": "center center",
          "backgroundRepeat": "no-repeat",
          "backgroundSize": "7px 8px",
          "height": 8,
          "position": "absolute",
          "right": "0",
          "top": "0",
          "width": 7,
        }
      }
    />
  </div>
  <div
    className="title-wrapper"
  >
    <div
      className="title"
    >
      JDBC
       Connection - 
      test
    </div>
  </div>
  <div
    className="sc-AxjAm Zaixe"
    style={
      Object {
        "gridTemplateColumns": "repeat(5, max-content)",
        "height": undefined,
      }
    }
  >
    <button
      className="theia-button"
      disabled={false}
    >
      Test Configuration
    </button>
    <button
      className="theia-button"
    >
      Revert
    </button>
    <div
      className="item item-enabled"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      title="Find (Ctrl+F)"
    >
      <div
        className="martini-icon martini-search-icon"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </div>
    <div
      className="item"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="martini-icon martini-start-icon disabled-icon"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </div>
    <div
      className="item item-enabled"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="martini-icon martini-stop-icon"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`DatabaseConnectionEditorToolbar should be rendered with errors 1`] = `
<div
  className="sc-AxirZ hEJXgT"
>
  <div
    className="martini-tree-icon martini-error-icon"
    style={
      Object {
        "marginRight": "4px",
        "position": "relative",
      }
    }
  >
    <div
      className="martini-started-overlay-icon"
      style={
        Object {
          "backgroundPosition": "center center",
          "backgroundRepeat": "no-repeat",
          "backgroundSize": "7px 8px",
          "height": 8,
          "position": "absolute",
          "right": "0",
          "top": "0",
          "width": 7,
        }
      }
    />
  </div>
  <div
    className="title-wrapper"
  >
    <div
      className="title error-label"
      title="URL: Cannot be blank."
    >
      URL
      : 
      Cannot be blank.
    </div>
  </div>
  <div
    className="sc-AxjAm Zaixe"
    style={
      Object {
        "gridTemplateColumns": "repeat(5, max-content)",
        "height": undefined,
      }
    }
  >
    <button
      className="theia-button"
      disabled={true}
    >
      Test Configuration
    </button>
    <button
      className="theia-button"
    >
      Revert
    </button>
    <div
      className="item item-enabled"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      title="Find (Ctrl+F)"
    >
      <div
        className="martini-icon martini-search-icon"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </div>
    <div
      className="item"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="martini-icon martini-start-icon disabled-icon"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </div>
    <div
      className="item item-enabled"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="martini-icon martini-stop-icon"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`DatabaseConnectionEditorToolbar should be rendered with start and stop disabled 1`] = `
<div
  className="sc-AxirZ hEJXgT"
>
  <div
    className="martini-tree-icon martini-jdbc-icon"
    style={
      Object {
        "marginRight": "4px",
        "position": "relative",
      }
    }
  >
    <div
      className="martini-started-overlay-icon"
      style={
        Object {
          "backgroundPosition": "center center",
          "backgroundRepeat": "no-repeat",
          "backgroundSize": "7px 8px",
          "height": 8,
          "position": "absolute",
          "right": "0",
          "top": "0",
          "width": 7,
        }
      }
    />
  </div>
  <div
    className="title-wrapper"
  >
    <div
      className="title"
    >
      JDBC
       Connection - 
      test
    </div>
  </div>
  <div
    className="sc-AxjAm Zaixe"
    style={
      Object {
        "gridTemplateColumns": "repeat(5, max-content)",
        "height": undefined,
      }
    }
  >
    <button
      className="theia-button"
      disabled={false}
    >
      Test Configuration
    </button>
    <button
      className="theia-button"
    >
      Revert
    </button>
    <div
      className="item item-enabled"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      title="Find (Ctrl+F)"
    >
      <div
        className="martini-icon martini-search-icon"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </div>
    <div
      className="item"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="martini-icon martini-start-icon disabled-icon"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </div>
    <div
      className="item"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="martini-icon martini-stop-icon disabled-icon"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </div>
  </div>
</div>
`;
